[package]
name = "nuklear-test-vki"
version = "0.1.0"
authors = ["snuk182 <snuk188@gmail.com>"]
edition = "2018"

[dependencies]
nuklear-rust = {version = "~0.6" }
nuklear-backend-vki = { version = "~0.1", git = "https://github.com/aloucks/nuklear-backend-vki.git", rev = "69e3dd5" }
#nuklear-backend-vki = { path = "../nuklear-backend-vki" }
image = "~0.21"
winit = "0.19.1"

[[bin]]
name = "nuklear-test-vki"
path = "src/main.rs"

#[patch.crates-io]
#ash = { git = "https://github.com/MaikKlein/ash.git", rev = "6d7e4bf" }

[features]
rust_allocator = ["nuklear-rust/rust_allocator"]
